# pop-launcher-firefox-tabs

./: Cargo.toml  Makefile  README.md  plugin.ron
assets/: ico.b64  ico.txt
scripts/: install.sh
src/: ico.rs  main.rs
