[package]
name = "pop-launcher-firefox-tabs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pop-launcher = "1"
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
log = "0.4"
env_logger = "0.9"
serde_json = "1"
blocking = "1"
futures-lite = "1"
firefox-rs = { path = "../firefox-rs" }
anyhow = "1"