[package]
name = "pop-launcher-firefox-tabs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pop-launcher = "1"
tokio = { version = "1", default-features = false, features = ["rt", "macros", "fs", "io-util"] }
log = "0.4"
# env_logger = { version = "0.9", optional = true }
serde_json = "1"
blocking = "1"
futures-lite = "1"
futures = "0.3"
firefox-rs = { path = "../firefox-rs" }
base64 = "0.13"
sha2 = "0.10"
systemd-journal-logger = { version = "0.5", optional = true }

[features]
default = ["journald"]
# env_logger = ["env_logger"]
journald = ["systemd-journal-logger"]